# openmi-idl

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean_build.sh
proto/: attr_value.proto  communication.proto  engine.proto  feature.proto  graph.proto  instance.proto  job_scheduler.proto  node.proto  node_def.proto  op_def.proto  optimizer.proto  ps.proto  raw_entity.proto  raw_feature.proto  tensor.proto  tensor_shape.proto  types.proto
proto/conf/: cache_conf.proto  extractor_conf.proto  feature_conf.proto  feature_list.proto  ps_client_conf.proto
proto/internal/: engine.proto
script/: compile-pb.sh  compile-proto.sh  compile-thrift.sh
test/: attr_value_test.cc  build.sh
thrift/: collector.thrift  predictor.thrift  ps.thrift
